# tiny-slam-drone

./: LICENSE  Makefile  README.md
.autocoder/: .gitignore  Makefile  api.json  script.py
ci/: ci_pipeline.yml
controller/: Cargo.toml  Makefile
controller/src/: calibration.rs  diagnostics.rs  flight_controller.rs  main.rs  navigation.rs  sensor_fusion.rs  slam.rs
docs/: README.md
simulator/: Cargo.toml  Makefile
simulator/src/: airsim.rs  main.rs  px4_integration.rs  telemetry.rs
tests/: test_overview.md
training/: Makefile  airsim_integration.py  drone_env.py  requirements.txt  train.py
unreal_project/: DroneSimulation.uproject  README.md
