[package]
name = "airsim_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mavlink = "0.10"
opencv = "0.68"
log = "0.4"
env_logger = "0.9"
